src/styles/notion.css
.notion.callout {
    font-weight: 300;
    font-size: max(24px, min(3.2vw, 32px));
    line-height: 1.4em;
    text-align: center;
    color: #2e2e2e;
    margin-top: 1.4em;
    padding-bottom: 1.8em;
    width: min(1000px, 90%) !important;
}

blockquote.notion {
    position: relative;
    font-size: max(18px, min(2.4vw, 24px));
    line-height: 1.4em;
    color: #2e2e2e;
    margin: 0 auto;
    margin-top: 1.4em;
    margin-bottom: 1.6em;
}

blockquote.notion > a {
    display: block;
    text-align: right;
    font-size: 14px;
    font-weight: bold;
}

blockquote.notion > a::before {
    content: "-";
    position: relative;
    padding-right: 8px;
}

blockquote.notion::before,
blockquote.notion::after {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 123.961 123.961'%3E%3Cpath d='M49.8 29.032c3.1-1.3 4.4-5 3-8l-4.9-10.3c-1.4-2.899-4.8-4.2-7.8-2.899-8.5 3.6-15.8 8.3-21.6 14C11.4 28.532 6.6 36.232 4 44.732c-2.6 8.601-4 20.3-4 35.2v30.7c0 3.3 2.7 6 6 6h39.3c3.3 0 6-2.7 6-6v-39.3c0-3.301-2.7-6-6-6H26.5c.2-10.101 2.6-18.2 7-24.301 3.6-4.898 9-8.898 16.3-11.999zM120.4 29.032c3.1-1.3 4.399-5 3-8l-4.9-10.199c-1.4-2.9-4.8-4.2-7.8-2.9-8.4 3.6-15.601 8.3-21.5 13.9-7.101 6.8-12 14.5-14.601 23-2.6 8.399-3.899 20.1-3.899 35.1v30.7c0 3.3 2.7 6 6 6H116c3.3 0 6-2.7 6-6v-39.3c0-3.301-2.7-6-6-6H97.1c.2-10.101 2.601-18.2 7-24.301 3.6-4.899 9-8.899 16.3-12z'/%3E%3C/svg%3E");
    position: absolute;
    height: 2em;
    width: 2em;
    pointer-events: none;
    opacity: 0.07;
    top: -0.4em;
}

blockquote.notion::before {
    left: -1em;
}

blockquote.notion::after {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 975.036 975.036'%3E%3Cpath d='M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z'/%3E%3C/svg%3E");
    right: -0.6em;
}

.notion-checkbox {
    color: #222222;
    margin-bottom: 0.4em;
    padding-left: 0.28em;
    line-height: 1.6em;
    letter-spacing: -0.02em;
}

.notion-checkbox svg {
    height: 0.8em;
    width: 0.8em;
    margin-right: 0.6em;
}

.notion-checkbox a {
    border-bottom: 0.1em solid #888888;
}

hr.notion {
    margin: 2rem auto;
    opacity: 0.2;
}

.notion-page {
    padding: 0 2rem;
    margin: 0 auto;
    width: 100%;
}

.notion-full-width {
    padding: 0 40px;
    max-width: 100%;
}

.notion-small-text p {
    font-size: 18px;
}

.notion-small-text li {
    font-size: 18px;
}

.notion-asset-wrapper {
    margin: 0.5rem auto 0.5rem;
    max-width: 100%;
}

.notion-asset-wrapper iframe {
    border: none;
    width: 90%;
    height: 300px;
    margin: 0 auto;
}

.notion-column {
    padding-top: 0.8rem;
    padding-bottom: 0.8rem;
}

.notion-column > *:first-child {
    margin-top: 0;
    margin-left: 0;
    margin-right: 0;
}

.notion-column > *:last-child {
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 0;
}

.notion-row {
    display: flex;
    overflow: hidden;
}

.notion-bookmark {
    margin: 4px 0;
    width: 100%;
    box-sizing: border-box;
    text-decoration: none;
    border: 1px solid rgba(55, 53, 47, 0.16);
    border-radius: 4px;
    display: flex;
    overflow: hidden;
    user-select: none;
}

.notion-bookmark > div:first-child {
    flex: 4 1 180px;
    padding: 12px 14px 14px;
    overflow: hidden;
    text-align: left;
    color: rgb(55, 53, 47);
}

.notion-bookmark-title {
    font-size: 14px;
    line-height: 20px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    min-height: 24px;
    margin-bottom: 2px;
}

.notion-bookmark-description {
    font-size: 12px;
    line-height: 16px;
    opacity: 0.6;
    height: 32px;
    overflow: hidden;
}

.notion-bookmark-link {
    display: flex;
    margin-top: 6px;
}

.notion-bookmark-link > img {
    width: 16px;
    height: 16px;
    min-width: 16px;
    margin-right: 6px;
}

.notion-bookmark-link > div {
    font-size: 12px;
    line-height: 16px;
    color: rgb(55, 53, 47);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.notion-bookmark-image {
    flex: 1 1 180px;
    position: relative;
}

.notion-bookmark-image img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    position: absolute;
}

.notion-column .notion-bookmark-image {
    display: none;
}

@media (max-width: 640px) {
    .notion-bookmark-image {
        display: none;
    }

    .notion-row {
        flex-direction: column;
    }

    .notion-row > *,
    .notion-column > * {
        width: 100% !important;
    }
}

.notion-spacer:last-child {
    display: none;
}

.notion-image-inset {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    border-radius: 1px;
}

.notion-image-caption {
    padding: 6px 0px;
    white-space: pre-wrap;
    word-break: break-word;
    font-size: 0.8rem;
    line-height: 1.4em;
    color: rgba(55, 53, 47, 0.6);
}

.notion-toggle {
    margin-top: 1.6rem;
    margin-bottom: 1.6rem;
}

.notion-toggle > summary {
    cursor: pointer;
    outline: none;
}

.notion-toggle > div {
    margin-left: 1em;
}

.notion-table,
.notion-th,
.notion-td {
    border: 1px solid rgba(55, 53, 47, 0.09);
    border-collapse: collapse;
}

.notion-table {
    width: 100%;
    border-left: none;
    border-right: none;
    border-spacing: 0px;
    white-space: nowrap;
}

.notion-th,
.notion-td {
    font-weight: normal;
    padding: 0.25em 0.5em;
    line-height: 1.5;
    min-height: 1.5em;
    text-align: left;
    font-size: 14px;
}

.notion-td.notion-bold {
    font-weight: 500;
}

.notion-th {
    color: rgba(55, 53, 47, 0.6);
    font-size: 14px;
}

.notion-td:first-child,
.notion-th:first-child {
    border-left: 0;
}

.notion-td:last-child,
.notion-th:last-child {
    border-right: 0;
}

.notion-gallery {
    display: grid;
    position: relative;
    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
    grid-auto-rows: 1fr;
    gap: 16px;
    border-top: 1px solid rgba(55, 53, 47, 0.16);
    padding-top: 16px;
    padding-bottom: 4px;
}
.notion-gallery-card {
    display: block;
    color: inherit;
    text-decoration: none;
    box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px,
        rgba(15, 15, 15, 0.1) 0px 2px 4px;
    border-radius: 3px;
    background: white;
    overflow: hidden;
    transition: background 100ms ease-out 0s;
    position: static;
    height: 100%;
}

.notion-gallery-content {
    padding: 8px 10px 6px;
    font-size: 12px;
    white-space: nowrap;
}

.notion-gallery-data.is-first {
    white-space: nowrap;
    word-break: break-word;
    caret-color: rgb(55, 53, 47);
    font-size: 14px;
    line-height: 1.5;
    min-height: 21px;
    font-weight: 500;
    overflow: hidden;
    text-overflow: ellipsis;
}

